--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             explicabo.
           </p>
           <div class="row ">
-            <div class="col">
+            <div class="col-sm-12">
               <p class="d-flex align-items-center gap-2"><span><i
                     class="ri-checkbox-circle-fill  fs-4 text-primary"></i></span> Lorem ipsum dolor sit <br> amet</p>
               <p class="d-flex align-items-center gap-2"><span><i
@@ -164,7 +164,7 @@
               </div>
 
             </div>
-            <div class="col">
+            <div class="col-sm-12">
               <p class="d-flex align-items-center gap-2"><span><i
                     class="ri-checkbox-circle-fill  fs-4 text-primary"></i></span>Incididunt ut labore et </p>
               <p class="d-flex align-items-center gap-2"><span><i
@@ -201,7 +201,7 @@
         </div>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div>
-      <div class="bg-info-subtle ms-auto Modisit   me-auto rounded-5">
+      <div class="bg-info-subtle ms-auto Modisit  me-auto rounded-5">
         <div class="gap-3 px-5 py-1 d-flex justify-content-center ">
           <div class="">
             <button class="btn btn-primary  px-4 rounded-5">Modisit</button>
@@ -241,14 +241,14 @@
       </div>
       <div class="row voluptates mb-5 ">
         <div class="col-md-3  align-items-start  ">
-          <div class="Corporis p-3 py-5">
+          <div class="Corporis mb-sm-3 p-3 py-5">
             <i class="ri-award-line  "></i>
             <h5 class="fs-5">Corporis voluptates</h5>
             <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
           </div>
         </div>
         <div class="col-md-3 ">
-          <div class="blue p-3 ">
+          <div class="blue p-3 mb-sm-3 ">
             <i class="ri-checkbox-circle-line"></i>
             <h5 class="fs-5">Explicabo <br> consectetur</h5>
             <p>Est autem dicta beatae <br class="mb-0"> suscipit. Sint veritatis et sit <br class="mb-0"> quasi ab aut
@@ -256,7 +256,7 @@
           </div>
         </div>
         <div class="col-md-3 ">
-          <div class="green p-3 py-5">
+          <div class="green mb-sm-3 p-3 py-5">
             <i class="ri-sun-foggy-line"></i>
             <h5 class="fs-5">Ullamco laboris</h5>
             <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
