--- a/index.html
+++ b/index.html
@@ -241,14 +241,14 @@
       </div>
       <div class="row voluptates mb-5 ">
         <div class="col-md-3  align-items-start  ">
-          <div class="Corporis mb-sm-3 p-3 py-5">
+          <div class="Corporis mb-3 p-3 py-5">
             <i class="ri-award-line  "></i>
             <h5 class="fs-5">Corporis voluptates</h5>
             <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
           </div>
         </div>
         <div class="col-md-3 ">
-          <div class="blue p-3 mb-sm-3 ">
+          <div class="blue p-3 mb-3 ">
             <i class="ri-checkbox-circle-line"></i>
             <h5 class="fs-5">Explicabo <br> consectetur</h5>
             <p>Est autem dicta beatae <br class="mb-0"> suscipit. Sint veritatis et sit <br class="mb-0"> quasi ab aut
@@ -256,7 +256,7 @@
           </div>
         </div>
         <div class="col-md-3 ">
-          <div class="green mb-sm-3 p-3 py-5">
+          <div class="green mb-3 p-3 py-5">
             <i class="ri-sun-foggy-line"></i>
             <h5 class="fs-5">Ullamco laboris</h5>
             <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
@@ -534,7 +534,7 @@
       </div>
     </div>
   </section>
-  <section id="Services " class="py-4 bg-info-subtle">
+  <section id="Services " class="py-4 bg-secondary-subtle">
     <div class="container services-box pb-5 py-4">
       <h2 class="text-center py-4 fs-1 mb-2">Services</h2>
       <p class="text-center fs-6  mb-5">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
