--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
       </div>
     </div>
   </section>
-  <section id="Contact" class="">
+  <section id="Contact" >
     <div class="container">
       <div class="d-flex flex-column align-items-center gap-2">
         <h2 class="text-center fs-3 mb-2 mt-3 pt-5">Contact</h2>
