--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
     </div>
     </div>
   </section>
-  <section id="Testimonials" class="bg-info-subtle py-4">
+  <section id="Testimonials" class="Testimonials py-4">
     <div class="container ">
       <div class="d-flex flex-column align-items-center gap-2">
         <h2 class="text-center fs-3 mb-2 mt-3 pt-5">Testimonials</h2>
