--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
       </div>
     </div>
   </section>
-  <section id="Pricing" class=" py-5">
+  <section id="Pricing" class="Pricing py-5">
     <div class="container">
       <div class="d-flex flex-column align-items-center gap-2">
         <h2 class="text-center fs-3 mb-2 mt-3 pt-5">Pricing</h2>
@@ -845,7 +845,7 @@
       </div>
     </div>
   </section>
-  <section id="Contact" >
+  <section id="Contact" class="Contact" >
     <div class="container">
       <div class="d-flex flex-column align-items-center gap-2">
         <h2 class="text-center fs-3 mb-2 mt-3 pt-5">Contact</h2>
