--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             explicabo.
           </p>
           <div class="row ">
-            <div class="col-sm-12">
+            <div class="col-sm-12 col-md-6">
               <p class="d-flex align-items-center gap-2"><span><i
                     class="ri-checkbox-circle-fill  fs-4 text-primary"></i></span> Lorem ipsum dolor sit <br> amet</p>
               <p class="d-flex align-items-center gap-2"><span><i
@@ -164,7 +164,7 @@
               </div>
 
             </div>
-            <div class="col-sm-12">
+            <div class="col-sm-12 col-md-6">
               <p class="d-flex align-items-center gap-2"><span><i
                     class="ri-checkbox-circle-fill  fs-4 text-primary"></i></span>Incididunt ut labore et </p>
               <p class="d-flex align-items-center gap-2"><span><i
